# INSP

./: .gitignore  EXPLICATION_FLUX_FRAUD_FEATURES.md  PREPROCESSING_TERMINE_SUCCES.md  RAPPORT_CORRECTIONS_ROUTES_PREDICT.md  RAPPORT_VERIFICATION_FRONTEND.md  RAPPORT_VERIFICATION_FRONTEND_BACKEND.md  README.md  SOLUTION_FINALE_COMPLETE.md  SOLUTION_FINALE_FRAUD_FEATURES.md  TOUS_LES_CHANGEMENTS_FRAUD_FEATURES.md  debug_ml_pipeline.py  test_all_chapters_fraud.py  test_fraud_detection.py  test_ocr_ingest_pipeline_complet.py  test_predictions.py  test_predictions_conformes.py  test_predictions_mixtes.py  test_scores.py  test_verification_conformes.py
inspectia_app/: .gitignore  (+38 more)
inspectia_app/backend/: .cursorrules  .dockerignore  .env.example  .gitignore  .ide-config  .pythonpath  .pythonrc  Dockerfile  FEATURES_BY_CHAPTER.md  Makefile  analyze_data_for_thresholds.py  docker-compose.yml  fix_fit_transform_issues.py  inspectia.code-workspace  inspectia_structure.txt  production_validation_suite.py  pyproject.toml  regenerate_splits.py  reorder_methods.py  requirements-dev.txt  requirements-ml.txt  requirements-ocr.txt  requirements.txt  setup.cfg  structure.txt  structure_complete.txt  test_all_98_endpoints.py  test_all_endpoints.py  test_final_98_endpoints.py  test_overfitting_comprehensive.py  update_training_methods.py  validate_calibration_robust.py  verify_calibration.py
inspectia_app/backend/api/: __init__.py  main.py  routes_predict.py
inspectia_app/backend/catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
inspectia_app/backend/configs/: base.yaml
(+150 files in other folders)
